.provarCaches/00D1q0000008b5bEAA/objects/xcdhcm__Project_Timesheet__c.object
<CustomObject>
    <description>Records time spent per employee per project</description>
    <fields>
        <fullName>xcdhcm__Approval_status__c</fullName>
        <formula>text(xcdhcm__Time_record__r.xcdhcm__Approval_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Current_month__c</fullName>
        <formula>month(today()) = month( xcdhcm__Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current month</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Day__c</fullName>
        <label>Day</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee</label>
        <referenceTo>xcdhcm__Employee_Detail__c</referenceTo>
        <relationshipLabel>Project Timesheets</relationshipLabel>
        <relationshipName>Project_Timesheets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Employeetext__c</fullName>
        <formula>xcdhcm__Employee__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Hours_hh_mm__c</fullName>
        <label>Hours (hh:mm)</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Hours_number__c</fullName>
        <formula>(FLOOR(VALUE(  xcdhcm__Hours_hh_mm__c ))* 60 +
(VALUE(  xcdhcm__Hours_hh_mm__c ) - FLOOR( VALUE(  xcdhcm__Hours_hh_mm__c ))) * 100)/60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Previous_month__c</fullName>
        <formula>month(today()) = month( xcdhcm__Date__c ) + 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Previous month</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Project__c</fullName>
        <label>Project</label>
        <referenceTo>xcdhcm__Project__c</referenceTo>
        <relationshipLabel>Project Timesheets</relationshipLabel>
        <relationshipName>Project_Timesheets</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Time_record__c</fullName>
        <label>Time record</label>
        <referenceTo>xcdhcm__Overtime__c</referenceTo>
        <relationshipLabel>Project Timesheets (Time Record)</relationshipLabel>
        <relationshipName>Project_Timesheets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Timesheet__c</fullName>
        <formula>xcdhcm__Time_record__r.xcdhcm__Overtime_Month__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The project time was recorded and approved on this timesheet</inlineHelpText>
        <label>Timesheet</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Timesheet_approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Timesheet approved</label>
        <type>Checkbox</type>
    </fields>
    <label>Project Timesheet</label>
    <nameField>
        <displayFormat>PT-{0000}</displayFormat>
        <label>Project time record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Timesheets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>